--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ script:
   - docker run -it -e OSCRIPT_VERSION=$OSCRIPT_VERSION -v $(pwd):/work_dir evilbeaver/onescript:1.0.19 sh -c 'cd /work_dir; sh /work_dir/travis-ci.sh; exit' | tee /tmp/test.log
   - grep 'Результат прогона тестов <Да>' /tmp/test.log
 after_success:
+  - git config --local core.quotepath fals
+  - git config --local merge.ours.driver true
   - bash <(curl -s https://codecov.io/bash) -f coverage/coverage.xml -v -d
   - ./sonar-qube.sh
 
