--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=opensource-configor
+sonar.projectKey=opensource-oscript-coverage
 sonar.organization=sonar-opensource-add
 
 # this is the name displayed in the SonarQube UI
-sonar.projectName=Enchanted config reader and writer for OScript
+sonar.projectName=Coverage convert tool for OScript
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
