Понижены требования к версии oscript

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - CHANNEL=dev
   - PACKAGE_NAME=coverage
   matrix:
+  - OSCRIPT_VERSION=1_0_18
   - OSCRIPT_VERSION=1_0_19
   - OSCRIPT_VERSION=1_0_20
   - OSCRIPT_VERSION=night-build
